[fix] Maven goals, sources and resources.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0</version>
 
     <build>
+        <defaultGoal>clean install</defaultGoal>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
