--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,4 @@ commands:
   unfreeze:
     permission: titania.unfreeze
     permission-message: §cVous n'avez pas la permission d'executer cette commande
+  money:
