[add] Command list.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,5 @@ commands:
     permission: titania.unfreeze
     permission-message: §cVous n'avez pas la permission d'executer cette commande
   money:
+  menu:
+  list:
