[add] command gm and message on join

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,3 +22,6 @@ commands:
   setrank:
     permission: titania.setrank
     permission-message: §cVous n'avez pas la permission d'executer cette commande
+  gm:
+    permission: titania.gm
+    permission-message: §cVous n'avez pas la permission d'executer cette commande
